--- a/socialapp-spa/src/app/nav/nav.component.html
+++ b/socialapp-spa/src/app/nav/nav.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark">
   <div class="container">
-    <a class="navbar-brand" [routerLink]="['/home']" >Social App</a>
+    <a class="navbar-brand" [routerLink]="['/home']" >Link Up</a>
 
     <ul *ngIf="loggedIn()" class="navbar-nav mr-auto">
       <li class="nav-item active" routerLinkActive="active">
